Construindo Landing Page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,80 @@
-<!doctype html>
-<html lang="en">
-  <head>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+    <link rel="icon" href="src/assets/iconDesafio.ico" type="image/x-icon"/>
+    <title>Alerta Floresta</title>
+    <link rel="stylesheet" href="landingpage.css"/>
+</head>
+<body>
+
+  <header>
+    <div class="topoLogo"><img src="src/assets/logoDesafio 5.svg" alt="logo" width="110" height="110"></div>
+    <nav>
+        <a>Início</a>
+        <a>Dashboard</a>
+        <a>Denuncie já</a>
+        <a>Login</a>
+    </nav>
+  </header>
+  <main>
+      <div class="container">
+        <style>
+          body{
+            background-image: url("src/assets/MataBackgound.png");
+            background-size: cover;
+            padding: 0;
+            margin:0;
+          }
+        </style>
+
+          <div class="texto">
+            <h1>Nossa <strong>floresta</strong><br>não é cinza!</h1>
+            <p class="texto2SubTitulo">Não as queimadas,<br><strong>denuncie já!</strong></p>
+              
+            <div class="botaoClique">
+            <a href="" class="botao">Clique aqui!</a>
+            </div>
+          </div>
+      
+          <div class="imagem">
+                  <img src="src/assets/Mapa.png" alt="Mapa do Brasil">
+          </div>
+      </div>
+    <section>
+        <h2>Para quem é essa plataforma?</h2>
+        <div>
+            <div>
+                <img src="" alt="Sinal de positivo">
+                <h3>Cidadãos conscientes</h3>
+                <p>Esta plataforma é destinada a cidadãos que desejam se informar sobre os impactos das queimadas e contribuir para sua preservação.</p>
+            </div>
+            <div>
+                <img src="" alt="Sinal de positivo">
+                <h3>Jovens e adultos em busca de dados e ferramentas</h3>
+                <p>Permite a busca de dados atualizados, informações confiáveis e ferramentas práticas para denunciar queimadas — de forma anônima ou identificada.</p>
+            </div>
+            <div>
+                <img src="" alt="Sinal de positivo">
+                <h3>Educadores, estudantes e gestores</h3>
+                <p>É um recurso útil para professores, estudantes, pesquisadores e gestores públicos que necessitam de acesso a indicadores socioambientais e materiais de apoio sobre o tema.</p>
+            </div>
+        </div>
+      </section>
+      <section>
+        <div>
+            <div>
+              <h3>Informação que gera ação</h3>
+              <p>O objetivo é fortalecer a participação social e o combate às queimadas por meio da informação, da transparência e da ação coletiva.</p>
+            </div>
+            <div>
+              <h3>Fique por dentro!</h3>
+            </div>
+        </div>
+      </section>
+    -->
+  </main>
+
+</body>
