Ajustando Landing Page

--- a/index.html
+++ b/index.html
@@ -43,38 +43,71 @@
                   <img src="src/assets/Mapa.png" alt="Mapa do Brasil">
           </div>
       </div>
-    <section>
+    <section class="publico-alvo">
         <h2>Para quem é essa plataforma?</h2>
-        <div>
-            <div>
-                <img src="" alt="Sinal de positivo">
-                <h3>Cidadãos conscientes</h3>
+        <div class="publico-container">
+            <div class="publico-card">
+                <img src="src/assets/Positivo.png" alt="Sinal de positivo">
+                <h3>Cidadãos<br>conscientes</h3>
                 <p>Esta plataforma é destinada a cidadãos que desejam se informar sobre os impactos das queimadas e contribuir para sua preservação.</p>
             </div>
-            <div>
-                <img src="" alt="Sinal de positivo">
+            <div class="publico-card">
+                <img src="src/assets/Positivo.png" alt="Sinal de positivo">
                 <h3>Jovens e adultos em busca de dados e ferramentas</h3>
                 <p>Permite a busca de dados atualizados, informações confiáveis e ferramentas práticas para denunciar queimadas — de forma anônima ou identificada.</p>
             </div>
-            <div>
-                <img src="" alt="Sinal de positivo">
-                <h3>Educadores, estudantes e gestores</h3>
+            <div class="publico-card">
+                <img src="src/assets/Positivo.png" alt="Sinal de positivo">
+                <h3>Educadores, estudantes<br>e gestores</h3>
                 <p>É um recurso útil para professores, estudantes, pesquisadores e gestores públicos que necessitam de acesso a indicadores socioambientais e materiais de apoio sobre o tema.</p>
             </div>
         </div>
       </section>
-      <section>
-        <div>
+      <section class="chamada-informacao">
+        <div class="chamada-bloco">
             <div>
-              <h3>Informação que gera ação</h3>
-              <p>O objetivo é fortalecer a participação social e o combate às queimadas por meio da informação, da transparência e da ação coletiva.</p>
+              <h3>Informação que geração</h3>
+              <p>O objetivo é fortalecer a participação social e o combate às queimadas<br>por meio da informação, da transparência e da ação coletiva.</p>
             </div>
-            <div>
+            <div class="chamada-box">
               <h3>Fique por dentro!</h3>
             </div>
+  
         </div>
       </section>
-    -->
+
   </main>
 
+  <footer class="footer">
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="src/assets/logoDesafio5-2.png" alt="Logo">
+        </div>
+        <div class="footer-links">
+            <h4>Links úteis</h4>
+            <ul>
+                <li><a>Início</a></li>
+                <li><a>Daschboard</a></li>
+                <li><a>Denuncie já!</a></li>
+                <li><a>Política de Privacidade</a></li>
+                <li><a>Termos de Uso</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-fontes">
+            <h4>Fontes de Dados</h4>
+            <ul>
+                <li><a>IBGE</a></li>
+                <li><a>Brasil.IO</a></li>
+                <li><a>IPEA Data</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-contato">
+            <h4 id="contato-footer">Contato</h4>
+            <p>Email: contato@alertafloresta.com.br</p>
+            <p>© 2025 Todos os direitos reservados</p>
+        </div>
+    </div>
+  </footer>
 </body>
